Styling: unify links to have same class and fix spacing

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -22,6 +22,7 @@
 
 .hero__links {
     display: flex;
+    align-items: center;
     gap: 20px;
 }
 
