--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@
   -webkit-text-size-adjust: 100%;
 
   /* Colors */
-
   /* Primary */
   --primary-indigo-50: #eef2ff;
   --primary-indigo-100: #e0e7ff;
@@ -55,9 +54,7 @@ a {
   color: var(--primary-indigo-300);
 }
 
-/* a:hover {
-  border-bottom: 2px solid var(--primary-indigo-500);
-} */
+
 
 p {
   padding-bottom: 1.5rem;
@@ -74,7 +71,6 @@ p {
 
 
 /* Headings */
-
 h1, h2, h3, h4, h5, h6 {
   color: var(--primary-indigo-500);
   font-weight: 700;
@@ -95,11 +91,9 @@ textarea, input {
 }
 
 /* Sections */
-
 section {
   margin-bottom: 60px;
 }
-
 
 @media screen and (min-width: 700px) {
   section {
@@ -107,17 +101,11 @@ section {
   }
 }
 
-.link {
-  color: var(--primary-indigo-500);
-  border-bottom: 2px solid var(--primary-indigo-500);
-}
-
 .icon {
   font-size: 40px;
 }
 
 /* Buttons */
-
 .btn {
     width: 150px;
     height: 35px;
@@ -135,3 +123,8 @@ section {
     color: var(--primary-indigo-700);
 }
 
+/* Links */
+
+.link:hover {
+    border-bottom: 2px solid var(--primary-indigo-500);
+}
